--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </head>
 
 <body class="body">
-  <audio class="audio" src="./Kenny G - The Moment (Official Video).mp3" autoplay type="audio" loop=""></audio>
+  <!-- <audio class="audio" src="./Kenny G - The Moment (Official Video).mp3" autoplay type="audio" loop=""></audio> -->
   <div class="open">
     <div class="card">
       <h2>Ada pesan untuk Irene</h2>
