--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.4/dist/sweetalert2.all.min.js"></script>
-  <title>Irene, My Love</title></title>
+  <title>Irene, My Love!</title>
   <style>
     html {
       scroll-behavior: smooth;
@@ -156,7 +156,6 @@
 </head>
 
 <body class="body">
-  <!-- <audio class="audio" src="./Kenny G - The Moment (Official Video).mp3" autoplay type="audio" loop=""></audio> -->
   <div class="open">
     <div class="card">
       <h2>Ada pesan untuk Irene</h2>
@@ -191,8 +190,8 @@
 
   </script>
   <script> AOS.init({once: true, });</script>
-  <script> var audio = document.querySelector(".audio"); if (musik) {audio.src = musik;} function mulai() {audio.play(); document.querySelector(".open").style = "opacity: 0;"; document.querySelector(".body").style = "overflow-y: scroll;"; setTimeout(function () {document.querySelector(".open").style.display = "none";}, 1000);} function wa(isi) {window.open("https://api.whatsapp.com/send?text= Sayang, " + isi);} async function tanya() {var {value: kado} = await swal.fire({title: "aku mau ngucapin ...", input: "text", showCancelButton: false, }); if (kado) {await swal.fire("Kirim jawabannya ke wa aku ya"); wa(kado);} else {await swal.fire("Jangan dikosongin dong"); tanya();} }</script>
-  <p class="wm"><span><a href="https://www.instagram.com/aryadgsp">Buatan Arya untuk Ayang Iyen</a></span></p>
+  <script> var audio = document.querySelector(".audio"); if (musik) {audio.src = musik;} function mulai() {audio.play(); document.querySelector(".open").style = "opacity: 0;"; document.querySelector(".body").style = "overflow-y: scroll;"; setTimeout(function () {document.querySelector(".open").style.display = "none";}, 1000);} function wa(isi) {window.open("https://api.whatsapp.com/send?text= Sayang, ... " + isi);} async function tanya() {var {value: kado} = await swal.fire({title: "aku mau ngucapin...", input: "text", showCancelButton: false, }); if (kado) {await swal.fire("Kirim jawabannya ke wa aku ya"); wa(kado);} else {await swal.fire("Jangan dikosongin dong"); tanya();} }</script>
+  <p class="wm"><span><a href="https://www.instagram.com/aryadgsp">Buatan Arya untuk Ayang</a></span></p>
 </body>
 
 </html>
